fix z-index of header

--- a/theme/themes/eea/extras/header.less
+++ b/theme/themes/eea/extras/header.less
@@ -21,7 +21,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        z-index: 999999;
+        z-index: 1;
     }
     .item {
         display: flex;
